<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EatIN</string>
    <string name="hello_world">Hello world!</string>
    
     <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_check_in">CheckIN</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_recommendation">Recommendation</string>
    <string name="title_activity_todo_list">TodoList</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_search_results">SearchResults</string>
    
      <string name="check">Check In</string>
       <string name="search">Customized Recommendation</string>
        <string name="recommend">Recommendation</string>
        <string name="todo">Todo List</string>
        
        <string name="add">Add</string>
     
  <string name="mood_prompt">Choose mood</string>
  <string name="mood_title">[How are you feeling ?]</string>
  
<string name="hungry_tilte">[Select a Cuisine]</string>
<string name="type_tilte">[Select a Type]</string>
   
<string-array name="mood_arrays">
        <item>[How are you Feeling??]</item>
        <item>Healthy</item>
        <item>Night Life</item>
        <item>Hungry</item>
        <item>College</item>
        <item>Celebrate</item>
        <item>Sleepy</item>
    </string-array>
    
      <string name="hungry_prompt">Choose Cuisine</string>

    <string-array name="cuisine_arrays">
         <item>[Select a Cuisine]</item>
        <item>American</item>
        <item>Asian</item>
        <item>Italian</item>
        <item>Germnan</item>
        <item>French</item>
        <item>Japanese</item>
    </string-array>
    
    
      <string name="type_prompt">Choose Type</string>

    <string-array name="type_arrays">
        <item>[Select a Type]</item>
        <item>Hungry</item>
        <item>Not</item>
   
    </string-array>
    
    <string name="mode_prompt">Choose Mode</string>

    <string-array name="mode_arrays">
        <item>[Mode of Transpotation]</item>
        <item>Drive</item>
        <item>Walk</item>
   
    </string-array>
</resources>
