<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eatin.SearchActivity" >

    <Spinner
        android:id="@+id/type_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mode"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:entries="@array/type_arrays"
        android:prompt="@string/type_prompt"
        android:text="@string/type_tilte" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/search"
         android:background="@drawable/sample"
        
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold" 
        
       
        />

    <Spinner
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/try_one"
        android:layout_below="@+id/type_select"
        android:layout_marginTop="38dp"
        android:ellipsize="marquee"
        android:entries="@array/mode_arrays"
        android:prompt="@string/mode_prompt" />

    <Spinner
        android:id="@+id/try_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ellipsize="marquee"
        android:visibility="invisible" />

</RelativeLayout>