<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eatin.HomeActivity" >

    <Button
        android:id="@+id/Recommendations_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Search_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
  
        android:text="@string/recommend"
       android:background="@drawable/sample"
        
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/TodoList_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Recommendations_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/todo" 
       android:background="@drawable/sample"
        
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold" 
    />

    <Button
        android:id="@+id/CheckIn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TodoList_new"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/check"
        android:background="@drawable/sample"
        
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Search_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CheckIn_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
   
        android:text="@string/search"
        android:background="@drawable/sample"
        
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold"/>

</RelativeLayout>
